Endpoint trucks working. Docker-Compose updated.
