# code/logistics/application/models/truck/itruck.ts
@@ -1,0 +1,8 @@
+interface ITruck {
+    registration: string;
+    tare: number;
+    capacity: number;
+    autonomy: number;
+}
+
+export { ITruck }
